--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- * {
+* {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -6,37 +6,32 @@
 }
 
 body {
-	background: #ddd;
-	display: flex;
+	background: white;
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
 }
 
 .container {
-	max-width: 991px;
-	width: 100%;
+    width: 80%;
+    margin-inline: auto;
 	background: #fff;
 	border-radius: 8px;
 	overflow: hidden;
 }
+
 .toolbar {
 	padding: 16px;
 	background: #eee;
 }
+
 .toolbar .head {
 	display: flex;
 	grid-gap: 10px;
 	margin-bottom: 16px;
 	flex-wrap: wrap;
 }
-.toolbar .head > input {
-	max-width: 100px;
-	padding: 6px 10px;
-	border-radius: 6px;
-	border: 2px solid #ddd;
-	outline: none;
-}
+
 .toolbar .head select {
 	background: #fff;
 	border: 2px solid #ddd;
@@ -44,26 +39,15 @@ body {
 	outline: none;
 	cursor: pointer;
 }
-.toolbar .head .color {
-	background: #fff;
-	border: 2px solid #ddd;
-	border-radius: 6px;
-	outline: none;
-	cursor: pointer;
-	display: flex;
-	align-items: center;
-	grid-gap: 6px;
-	padding: 0 10px;
-}
 
-
-.toolbar .btn-toolbar {
+.toolbar .head .btn-toolbar {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
 	grid-gap: 10px;
 }
-.toolbar .btn-toolbar button {
+
+.toolbar .head .btn-toolbar button {
 	background: #fff;
 	border: 2px solid #ddd;
 	border-radius: 6px;
@@ -75,26 +59,27 @@ body {
 	justify-content: center;
 	font-size: 18px;
 }
-.toolbar .btn-toolbar button:hover {
+
+.toolbar .head .btn-toolbar button:hover {
 	background: #f3f3f3;
 }
+
 #content {
 	padding: 16px;
 	outline: none;
-	max-height: 50vh;
+    min-height: 250px;
 	overflow: auto;
 }
-#show-code[data-active="true"] {
-	background: #eee;
-} 
 
 #show-code {
-    background:black;
-    color: #fff;
+    background: rgb(255 255 255);
+    color: #161515;
     border: none;
-    border-radius: 50px;
+    cursor: pointer;
+    width: 40px;
+    border: 2px solid #ddd;
+    height: 40px;
     padding: 5px 10px;
     cursor: pointer;
     transition: background 0.3s ease;
 }
-
